# rufa

./: .gitignore  Cargo.toml  PLAN.md  README.md
example/: AGENTS.md  rufa.toml
src/: cli.rs  debug_update.rs  env.rs  logging.rs  main.rs  paths.rs  state.rs  watch.rs
src/cli/: log_io.rs  mod.rs
src/cli/handlers/: mod.rs
src/config/: error.rs  loader.rs  mod.rs  model.rs  raw.rs
src/ipc/: lock.rs  mod.rs  protocol.rs  unix.rs
src/runner/: control.rs  drivers.rs  generation.rs  mod.rs  ports.rs  restart.rs
