[package]
name = "rufa"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
camino = "1.1"
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
humantime-serde = "1.1"
notify = "6.1"
once_cell = "1.18"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "signal", "process", "time", "fs", "io-util", "sync", "net"] }
tokio-stream = "0.1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1", features = ["v4"] }
nix = { version = "0.27", default-features = false, features = ["signal"] }
lazy_static = "1.4"
regex = "1"
terminal_size = "0.3"
unicode-width = "0.1"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
